fix(contrast): improve contrast yellow-pink for rgb values (#161)
* fix(contrast): improve contrast yellow-pink for rgb values

* ci(lighthouse): increase accessibility budget

--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -10,7 +10,7 @@ h3,
 }
 
 h2 {
-  text-shadow: 0px 0px 10px rgb(224, 32, 158);
+  text-shadow: 0px 0px 10px #d01b91;
   color: rgb(255, 255, 255);
   font-size: 32px;
   letter-spacing: 1.6px;
@@ -23,7 +23,7 @@ h2 {
 
 h3,
 .h3 {
-  text-shadow: 0px 0px 10px rgb(224, 32, 158);
+  text-shadow: 0px 0px 10px #d01b91;
   color: rgb(255, 255, 255);
   font-size: 24px;
   letter-spacing: 1.6px;
@@ -94,9 +94,9 @@ ol {
 a {
   color: rgb(255, 255, 255);
   transition: text-decoration-color 0.15s ease-out;
-  text-decoration-color: rgb(224, 32, 158);
+  text-decoration-color: #d01b91;
 
   &:hover {
-    text-decoration-color: rgb(247, 243, 0);
+    text-decoration-color: #fffb3d;
   }
 }
